feat: add doc bottom nav

--- a/src/content/kubejs/tweaks/drygmy.mdx
+++ b/src/content/kubejs/tweaks/drygmy.mdx
@@ -79,7 +79,7 @@ LootJS.modifiers((event) => {
 });
 ```
 
-#### Boss Mobs
+### Boss Mobs
 
 <span class="badge text-bg-dark server-scripts">server_scripts</span>
 
