feat: add Drygmy's and You!

--- a/src/content/docs/containment-jars/custom-behaviours.mdx
+++ b/src/content/docs/containment-jars/custom-behaviours.mdx
@@ -23,4 +23,4 @@ import { IconCheckbox } from "@tabler/icons-react"
 | Pufferfish      | Produce a redstone signal when a player is nearby                     |                    |
 | Sheep           | Can be sheared and will periodically eat grass to regrow their wool   |                    |
 | Villagers       | Can be traded with and will restock as usual                          |                    |
-| Default         | Play the mobs idle sound                                              | <IconCheckbox />   |
+| Default         | Play the mobs idle sound, and passes through interactions             | <IconCheckbox />   |
