feat: add more spells and information

--- a/src/content/spells/combat/defensive.mdx
+++ b/src/content/spells/combat/defensive.mdx
@@ -3,3 +3,14 @@ title: "Defensive"
 description: "A list of Defensive Combat spells"
 weight: 0
 ---
+
+import Spell from '../../../components/Spell.astro'
+
+## Wall of Stone
+<Spell
+    author='Lyrellion'
+    glyphs={["touch", "sensitive", "wall", "sensitive", "conjure_terrain", "amplify"]}
+    description='Create a permanent wall of stone to seal off a passage or build a wall.'
+    versions={["1.20.1"]}
+    addons={["elemental"]}
+/>
