--- a/src/content/spells/combat/support.mdx
+++ b/src/content/spells/combat/support.mdx
@@ -3,3 +3,14 @@ title: "Support"
 description: "A list of Support Combat spells"
 weight: 0
 ---
+
+import Spell from '../../../components/Spell.astro'
+
+## Animate Objects
+<Spell
+    author='Lyrellion'
+    glyphs={["projectile", "chain", "animate_block", "extend_time"]}
+    description='Replace a plane of blocks with blocks from your hotbar. Useful for replacing sections of walls/floors with a specific block. Can add additional AoEs for larger sections.'
+    versions={["1.20.1"]}
+    addons={["tmg", "neg"]}
+/>
