--- a/src/content/spells/introduction/compendium.mdx
+++ b/src/content/spells/introduction/compendium.mdx
@@ -3,3 +3,9 @@ title: "Compendium"
 description: "Introduction to the Spell Compendium"
 weight: 0
 ---
+
+Welcome to the Spell Compendium, a community-sourced collection of useful Spells for the everyday Sourcerer.
+
+Spells have been sorted into various categories to try make useful spells easier to find.<br/>If you'd like to suggest a new category please leave a comment in the discord in the #ars-guide channel.
+
+If you have your own spells you'd like to contribute, please head over to the [spell submission form](/spells/introduction/submit).
