--- a/src/content/spells/other/automation.mdx
+++ b/src/content/spells/other/automation.mdx
@@ -3,3 +3,7 @@ title: "Automation"
 description: "A list of Automation spells"
 weight: 0
 ---
+
+import Spell from '../../../components/Spell.astro'
+
+Awaiting submissions...
