--- a/src/content/spells/other/fun.mdx
+++ b/src/content/spells/other/fun.mdx
@@ -3,3 +3,7 @@ title: "Fun"
 description: "A list of Fun spells"
 weight: 0
 ---
+
+import Spell from '../../../components/Spell.astro'
+
+Awaiting submissions...
