--- a/src/content/spells/other/utility.mdx
+++ b/src/content/spells/other/utility.mdx
@@ -3,3 +3,13 @@ title: "Utility"
 description: "A list of Utility spells"
 weight: 0
 ---
+
+import Spell from '../../../components/Spell.astro'
+
+## Renovate
+<Spell
+    author='Lyrellion'
+    glyphs={["projectile", "exchange", "aoe", "aoe", "pickup"]}
+    description='Replace a plane of blocks with blocks from your hotbar. Useful for replacing sections of walls/floors with a specific block. Can add additional AoEs for larger sections.'
+    versions={["1.20.1"]}
+/>
