feat: add submitted spells

--- a/src/content/spells/other/automation.mdx
+++ b/src/content/spells/other/automation.mdx
@@ -6,4 +6,10 @@ weight: 0
 
 import Spell from '../../../components/Spell.astro'
 
-Awaiting submissions...
+## Fall Assisted Runic Thermal Smelter
+<Spell
+    author='Zieg777'
+    glyphs={["rune","smelt","pierce","pierce","pierce","pierce","pierce","pierce","pierce"]}
+    description='Dropping items into the Smelt rune will smelt half a stack at a time. Stack two runes together to smelt a full stack as you toss them in. Works best when made permanent with chalk'
+    versions={["1.16.5","1.18.2","1.19.2","1.20.1"]}
+/>
