--- a/src/content/spells/other/exploration.mdx
+++ b/src/content/spells/other/exploration.mdx
@@ -14,3 +14,19 @@ import Spell from '../../../components/Spell.astro'
     description='Launch yourself into the air and gain flight for an extended duration.<br/>Replace Self with Touch to grant flight to another player.'
     versions={["1.20.1"]}
 />
+
+## Ethereal Path
+<Spell
+    author='Danicus'
+    glyphs={["projectile","pierce","pierce","intangible","aoe","aoe","pierce","pierce","extend_time","extend_time"]}
+    description='A spell that will allow you to easily pass through walls and floors.'
+    versions={["1.20.1"]}
+/>
+
+## Dash
+<Spell
+    author='Arin'
+    glyphs={["self","leap","amplify","amplify"]}
+    description='Best used with the Flight spell for a practically free extension to your flight times, basically acts as a rocket.<br/><br/><b>Note:</b> use more Amplify Glyphs for higher speeds and more distance covered'
+    versions={["1.20.1","1.19.2"]}
+/>
