--- a/src/content/spells/other/utility.mdx
+++ b/src/content/spells/other/utility.mdx
@@ -13,3 +13,11 @@ import Spell from '../../../components/Spell.astro'
     description='Replace a plane of blocks with blocks from your hotbar. Useful for replacing sections of walls/floors with a specific block. Can add additional AoEs for larger sections.'
     versions={["1.20.1"]}
 />
+
+## Mage Hand
+<Spell
+    author='Xacris'
+    glyphs={["projectile","sensitive","dispel","interact","redstone_signal","sensitive","duration_down","pickup","aoe"]}
+    description='A multi-purpose spell that can dispel, interact with buttons/levers and whatever else you need, activate redstone, and pickup items'
+    versions={["1.19.2","1.20.1"]}
+/>
