--- a/src/content/spells/combat/support.mdx
+++ b/src/content/spells/combat/support.mdx
@@ -10,7 +10,15 @@ import Spell from '../../../components/Spell.astro'
 <Spell
     author='Lyrellion'
     glyphs={["projectile", "chain", "animate_block", "extend_time"]}
-    description='Replace a plane of blocks with blocks from your hotbar. Useful for replacing sections of walls/floors with a specific block. Can add additional AoEs for larger sections.'
+    description='Turn a chunk of terrain into an army of followers.'
     versions={["1.20.1"]}
     addons={["tmg", "neg"]}
+/>
+
+## Blocked Host
+<Spell
+    author='Danicus'
+    glyphs={["touch","sensitive","phantom_block","aoe","aoe","animate_block"]}
+    description='With Focus of Block Shaping, summon a host of loyal blocks, an environment-friendly spell.'
+    versions={["1.20.1"]}
 />
