--- a/src/content/spells/other/fun.mdx
+++ b/src/content/spells/other/fun.mdx
@@ -6,4 +6,10 @@ weight: 0
 
 import Spell from '../../../components/Spell.astro'
 
-Awaiting submissions...
+## Rocket Launch
+<Spell
+    author='Arin'
+    glyphs={["self","launch","launch","launch","launch","launch","launch","bounce","extend_time","extend_time"]}
+    description="Ever wanted to go to space and live the fall back down? Well now you can, for the simple price of your entire mana bar! (Mana cost exaggerated)<br/><br/><b>Note:</b> If you want to launch someone else out of the stratosphere use the touch form or projectile form<br/><b>Note:</b> This also works on blocks would not recommend shooting your storage system"
+    versions={["1.20.1"]}
+/>
