--- a/src/content/spells/combat/defensive.mdx
+++ b/src/content/spells/combat/defensive.mdx
@@ -14,3 +14,12 @@ import Spell from '../../../components/Spell.astro'
     versions={["1.20.1"]}
     addons={["elemental"]}
 />
+
+## Black Hole
+<Spell
+    author='Lyrellion'
+    glyphs={["touch", "sensitive", "gravity", "sensitive", "aoe", "aoe", "aoe", "aoe", "aoe", "aoe"]}
+    description='Create a singularity that pulls entities towards it in a large area. Set color to (1, 1, 1) to make it nearly invisible. Requires Earth Focus.'
+    versions={["1.19.2", "1.20.1"]}
+    addons={["elemental"]}
+/>
