--- a/src/content/spells/combat/support.mdx
+++ b/src/content/spells/combat/support.mdx
@@ -22,3 +22,12 @@ import Spell from '../../../components/Spell.astro'
     description='With Focus of Block Shaping, summon a host of loyal blocks, an environment-friendly spell.'
     versions={["1.20.1"]}
 />
+
+## Telekinesis
+<Spell
+    author='Lyrellion'
+    glyphs={["projectile", "accelerate", "filter_living", "exchange", "blink"]}
+    description='Pulls a distant creature to you.'
+    versions={["1.20.1"]}
+    addons={["tmg", "neg"]}
+/>
