--- a/src/content/spells/other/utility.mdx
+++ b/src/content/spells/other/utility.mdx
@@ -21,3 +21,27 @@ import Spell from '../../../components/Spell.astro'
     description='A multi-purpose spell that can dispel, interact with buttons/levers and whatever else you need, activate redstone, and pickup items'
     versions={["1.19.2","1.20.1"]}
 />
+
+## Excavate
+<Spell
+    author='Lyrellion'
+    glyphs={["projectile", "burst", "sensitive", "aoe", "aoe", "aoe", "aoe", "break", "extract", "pickup"]}
+    description='Mining spell that clears a massive area and places the drops into inventory. Recommended to carry a Jar of Voiding set to convert basic blocks.'
+    versions={["1.20.1"]}
+/>
+
+## Nightstalker
+<Spell
+    author='Lyrellion'
+    glyphs={["self", "light", "amplify", "extend_time", "extend_time", "extend_time", "extend_time", "extend_time", "extend_time", "extend_time"]}
+    description='Grant long duration night vision to yourself. Replace Self with Touch to grant to another player.'
+    versions={["1.19.2", "1.20.1"]}
+/>
+
+## Floating Disc
+<Spell
+    author='Lyrellion'
+    glyphs={["underfoot", "phantom_block", "aoe", "aoe", "extend_time"]}
+    description='Cast while in the air to create a temporary floating platform.'
+    versions={["1.20.1","1.19.2"]}
+/>
