feat: add more spells

--- a/src/content/spells/combat/aggressive.mdx
+++ b/src/content/spells/combat/aggressive.mdx
@@ -105,3 +105,120 @@ import Spell from '../../../components/Spell.astro'
     addons={["elemental"]}
     versions={["1.20.1"]}
 />
+
+## Shadow Clones
+<Spell
+    author='Lyrellion'
+    glyphs={["underfoot", "wall", "sensitive", "propagate_arc", "split", "split", "summon_decoy", "extend_time", "extend_time", "extend_time"]}
+    description='Summon a crowd of decoys to distract enemies.'
+    addons={["elemental"]}
+    versions={["1.20.1"]}
+/>
+
+## Spike Growth
+<Spell
+    author='Lyrellion'
+    glyphs={["projectile", "chain", "aoe", "aoe", "aoe", "spike", "amplify", "amplify", "extend_time", "extend_time"]}
+    description='Deal heavy earth damage to all ground based enemies in a fairly wide area.'
+    addons={["elemental", "tmg", "neg"]}
+    versions={["1.20.1"]}
+/>
+
+## Zap
+<Spell
+    author='Lyrellion'
+    glyphs={["projectile", "hex", "spark", "discharge", "delay", "spark", "discharge", "delay", "spark", "discharge"]}
+    description='Deals heavy lightning damage to a single target and moderate damage to nearby enemies.'
+    addons={["elemental"]}
+    versions={["1.20.1"]}
+/>
+
+## Cutting Winds
+<Spell
+    author='Lyrellion'
+    glyphs={["homing_projectile", "accelerate", "wind_shear", "amplify", "amplify", "delay", "wind_shear", "amplify", "amplify"]}
+    description='Deal Heavy damage to airborne enemies (like the Ender Dragon).'
+    addons={["elemental"]}
+    versions={["1.20.1"]}
+/>
+
+## Catapult
+<Spell
+    author='Lyrellion'
+    glyphs={["touch", "sensitive", "conjure_terrain", "amplify", "leap", "amplify", "amplify", "amplify", "break", "pickup"]}
+    description='Summon a block of stone to hurl at an enemy.'
+    addons={["elemental"]}
+    versions={["1.20.1"]}
+/>
+
+## Collapsing Stars
+<Spell
+    author='Clement446'
+    glyphs={["projectile","burst","aoe","aoe","sensitive","propagate_homing","ignite","flare","amplify","heal"]}
+    description='Creates a swarm of projectiles around the enemy, dealing heavy Fire damage with the "Hellfire" effect.
+
+⚠Requires either the Kindling Thread at tier three, or the Fire Focus, depending on the Ars Elemental version ⚠'
+    addons={["elemental"]}
+    versions={["1.20.1"]}
+/>
+
+## Arcane Scar
+<Spell
+    author='Danicus'
+    glyphs={["projectile","wither","amplify","amplify","extend_time","hex","amplify","amplify","amplify","extend_time"]}
+    description='Marks the target with wicked magic, consuming its life and making it vulnerable to subsequent spells.'
+    versions={["1.20.1"]}
+/>
+
+## Harm Cannon
+<Spell
+    author='Lava'
+    glyphs={["overhead","burst","sensitive","chain","propagate_homing","hex","harm","amplify","heal"]}
+    description='Tier 3 Thread of kindling required. Does massive damage wherever the caster aims.'
+    versions={["1.20.1","1.19.2"]}
+    addons={["tmg", "neg","elemental","trinkets"]}
+/>
+
+## Aggressive Wall
+<Spell
+    author='Danicus'
+    glyphs={["touch","sensitive","phantom_block","aoe","aoe","duration_down","leap","amplify","amplify"]}
+    description='With the help of Focus of Block Shaping, you summon a wall of mageblocks and throw it hard forward, knocking down those it hits.'
+    versions={["1.20.1"]}
+/>
+
+## GOAT Lightning
+<Spell
+    author='Xacris'
+    glyphs={["projectile","linger","sensitive","aoe","aoe","aoe","aoe","aoe","aoe","lightning"]}
+    description='The original flashy lingering lightning spell of doom! Not the highest damage, but certainly sends a message'
+    versions={["1.16.5","1.18.2","1.19.2","1.20.1"]}
+/>
+
+## Orb of Obliteration
+<Spell
+    author='Danicus'
+    glyphs={["projectile","burst","sensitive","aoe","aoe","explosion","amplify","aoe","aoe","aoe"]}
+    description='An orb that at the point of impact will devastate everything around it, throwing whatever survives into the air.'
+    versions={["1.20.1"]}
+/>
+
+## Classical Chained Lightning
+<Spell
+    author='Clement446'
+    glyphs={["ray","chain","amplify","burst","aoe","aoe","sensitive","lightning","amplify","amplify"]}
+    description="Creates explosions of lightning strikes at targets (also affects blocks)
+
+Chaining can be removed, but it will loose it's large AOE."
+    versions={["1.20.1"]}
+    addons={["tmg"]}
+/>
+
+## Enhanced Bladestorm
+<Spell
+    author='Clement446'
+    glyphs={["aura","amplify","aoe","aoe","not_self","chain","burst","air_sword","amplify","amplify"]}
+    description='Creates an area of effect around you that will attack enemies with powerful air swords.'
+    versions={["1.20.1","1.19.2"]}
+    addons={["trinkets","tmg"]}
+/>
