--- a/src/content/spells/combat/defensive.mdx
+++ b/src/content/spells/combat/defensive.mdx
@@ -23,3 +23,19 @@ import Spell from '../../../components/Spell.astro'
     versions={["1.19.2", "1.20.1"]}
     addons={["elemental"]}
 />
+
+## Ice Field
+<Spell
+    author='Lyrellion'
+    glyphs={["projectile", "conjure_water", "aoe", "aoe", "freeze", "spike", "snare", "extend_time", "extend_time"]}
+    description='Create an area of damaging spikes that snares enemies for a moderate duration.'
+    versions={["1.20.1"]}
+/>
+
+## Tiny Hut
+<Spell
+    author='Xacris'
+    glyphs={["underfoot","phantom_block","aoe","aoe","pierce","pierce","pierce"]}
+    description='Conjures a box of Mageblocks around you. Good spell to cast in a panic!'
+    versions={["1.16.5","1.18.2","1.19.2","1.20.1"]}
+/>
