--- a/src/content/spells/combat/support.mdx
+++ b/src/content/spells/combat/support.mdx
@@ -31,3 +31,11 @@ import Spell from '../../../components/Spell.astro'
     versions={["1.20.1"]}
     addons={["tmg", "neg"]}
 />
+
+## Unnoticed Escape
+<Spell
+    author='Danicus'
+    glyphs={["self","summon_decoy","extend_time","blink","amplify","amplify","invisibility","extend_time"]}
+    description='You teleport forward, becoming invisible and leaving behind a decoy to suffer the consequences.'
+    versions={["1.20.1"]}
+/>
