--- a/src/content/spells/other/exploration.mdx
+++ b/src/content/spells/other/exploration.mdx
@@ -30,3 +30,12 @@ import Spell from '../../../components/Spell.astro'
     description='Best used with the Flight spell for a practically free extension to your flight times, basically acts as a rocket.<br/><br/><b>Note:</b> use more Amplify Glyphs for higher speeds and more distance covered'
     versions={["1.20.1","1.19.2"]}
 />
+
+## Rainbow Road
+<Spell
+    author='Xacris'
+    glyphs={["echoing_projectile","extend_time","extend_time","extend_time","decelerate","delay","propagate_underfoot","phantom_block","aoe","aoe"]}
+    description='This spell will conjure a series of floating platforms that form a solid walkway as it flies! Set the spell color to rainbow for even more fun'
+    versions={["1.20.1"]}
+    addons={["neg"]}
+/>
