--- a/src/content/spells/other/fun.mdx
+++ b/src/content/spells/other/fun.mdx
@@ -13,3 +13,11 @@ import Spell from '../../../components/Spell.astro'
     description="Ever wanted to go to space and live the fall back down? Well now you can, for the simple price of your entire mana bar! (Mana cost exaggerated)<br/><br/><b>Note:</b> If you want to launch someone else out of the stratosphere use the touch form or projectile form<br/><b>Note:</b> This also works on blocks would not recommend shooting your storage system"
     versions={["1.20.1"]}
 />
+
+## Firework Display
+<Spell
+    author='Xacris'
+    glyphs={["projectile","wall","aoe","sensitive","firework","amplify","extend_time","extend_time","extend_time","extend_time"]}
+    description='Conjures a wall that will shoot fireworks into the sky! They fly higher than vanilla fireworks can, makes for an impressive display'
+    versions={["1.19.2","1.20.1"]}
+/>
