--- a/src/content/spells/other/utility.mdx
+++ b/src/content/spells/other/utility.mdx
@@ -45,3 +45,35 @@ import Spell from '../../../components/Spell.astro'
     description='Cast while in the air to create a temporary floating platform.'
     versions={["1.20.1","1.19.2"]}
 />
+
+## Deluge
+<Spell
+    author='Lyrellion'
+    glyphs={["projectile", "burst", "sensitive", "conjure_water"]}
+    description='Create Water in a large area. Add AOE glyphs after the Sensitive glyph to increase the volume.'
+    versions={["1.20.1"]}
+/>
+
+## Runic Return
+<Spell
+    author='Zieg777'
+    glyphs={["rune","exchange"]}
+    description='A simple tier 2 spell that acts as an ender pearl stasis chamber. If any mob or item triggers the rune, it will warp the player who placed it back to that spot'
+    versions={["1.16.5","1.18.2","1.19.2","1.20.1"]}
+/>
+
+## Dome of Breathing
+<Spell
+    author='Danicus'
+    glyphs={["self","burst","sensitive","aoe","aoe","aoe","aoe","evaporate"]}
+    description='It evaporates all the liquid around, allowing you to breathe and move.'
+    versions={["1.20.1"]}
+/>
+
+## Illuminated Prospecting
+<Spell
+    author='Danicus'
+    glyphs={["projectile","pierce","pierce","light","break","aoe","aoe","pierce","pierce","pickup"]}
+    description='Launch a projectile that will voraciously excavate the earth in its path while illuminating it.'
+    versions={["1.20.1"]}
+/>
