feat: add more spells

--- a/src/content/spells/other/utility.mdx
+++ b/src/content/spells/other/utility.mdx
@@ -77,3 +77,12 @@ import Spell from '../../../components/Spell.astro'
     description='Launch a projectile that will voraciously excavate the earth in its path while illuminating it.'
     versions={["1.20.1"]}
 />
+
+## Charge
+<Spell
+    author='Lyrellion'
+    glyphs={["projectile","lightning","dampen","dampen"]}
+    description='Can be used to turn a creeper into a charged creeper without doing significant damage to them.'
+    versions={["1.20.1"]}
+    addons={[""]}
+/>
