--- a/src/content/spells/combat/defensive.mdx
+++ b/src/content/spells/combat/defensive.mdx
@@ -39,3 +39,12 @@ import Spell from '../../../components/Spell.astro'
     description='Conjures a box of Mageblocks around you. Good spell to cast in a panic!'
     versions={["1.16.5","1.18.2","1.19.2","1.20.1"]}
 />
+
+## Shadow Clones
+<Spell
+    author='Lyrellion'
+    glyphs={["underfoot", "wall", "sensitive", "propagate_arc", "split", "split", "summon_decoy", "extend_time", "extend_time", "extend_time"]}
+    description='Summon a crowd of decoys to distract enemies.'
+    addons={["elemental"]}
+    versions={["1.20.1"]}
+/>
