--- a/src/content/spells/combat/defensive.mdx
+++ b/src/content/spells/combat/defensive.mdx
@@ -48,3 +48,21 @@ import Spell from '../../../components/Spell.astro'
     addons={["elemental"]}
     versions={["1.20.1"]}
 />
+
+## Ring of Eviceration
+<Spell
+    author='ArborSolis'
+    glyphs={["orbit","accelerate","accelerate","accelerate","accelerate","accelerate","accelerate","accelerate","blink"]}
+    description='This spell creates a fast spinning ring of blink spells, that combined with an off-handed warp scroll can teleport any would be attackers to the set location. An easy way to dispatch of enemies with limited effort.
+
+Note: Warp scroll should be set to a place far away. Examples: In the void, a pit filled with hostile mobs, high up in the sky, etc..'
+    versions={["1.20.1"]}
+/>
+
+## Human Cannonball
+<Spell
+    author='Darkfira'
+    glyphs={["touch","launch","amplify","amplify","amplify","delay","gust","amplify","amplify","explosion"]}
+    description='Send Melee attackers flying in a fun way!'
+    versions={["1.16.5","1.18.2","1.19.2","1.20.1"]}
+/>
