--- a/src/content/spells/other/utility.mdx
+++ b/src/content/spells/other/utility.mdx
@@ -84,5 +84,12 @@ import Spell from '../../../components/Spell.astro'
     glyphs={["projectile","lightning","dampen","dampen"]}
     description='Can be used to turn a creeper into a charged creeper without doing significant damage to them.'
     versions={["1.20.1"]}
-    addons={[""]}
+/>
+
+## Tunnel
+<Spell
+    author='Darkfira'
+    glyphs={["projectile","pierce","pierce","pierce","break","amplify","aoe","aoe","pierce","pickup"]}
+    description='Tier 2 Mining spell. Creates a 3x3 Tunnel and picks it up. Replace pierce with Extract if required. Perfect for speeding along your diamond mining especially paired with a Jar of Voiding!'
+    versions={["1.16.5","1.18.2","1.19.2","1.20.1"]}
 />
