feat: add more spells

--- a/src/content/spells/combat/aggressive.mdx
+++ b/src/content/spells/combat/aggressive.mdx
@@ -239,3 +239,29 @@ Chaining can be removed, but it will loose it's large AOE."
 Launches a single block in the direction you are facing dealing damage based on block hardness. You can replace "Place Block" with "Conjure Mageblock" and remove everything from delay onwards if you do not wish to use a specific block.'
     versions={["1.16.5","1.18.2","1.20.1","1.19.2"]}
 />
+
+## New Fireball
+<Spell
+    author='Clement446'
+    glyphs={["projectile","burst","sensitive","aoe","aoe","flare","amplify","amplify","reset","explosion"]}
+    description='A &quot;new&quot; version of the Fireball spell.
+It uses the &quot;reset&quot; glyph to include the &quot;Explode&quot; glyph without causing much destruction.'
+    versions={["1.20.1"]}
+/>
+
+## Electrifying Water
+<Spell
+    author='Danicus'
+    glyphs={["projectile","burst","sensitive","conjure_water","delay","evaporate","reset","lightning","amplify","amplify"]}
+    description='With this spell you will briefly envelop the target in water, exposing it to the power of lightning.'
+    versions={["1.20.1"]}
+/>
+
+## Embrace of the Depths
+<Spell
+    author='Danicus'
+    glyphs={["projectile","burst","sensitive","conjure_water","aoe","reset","watery_grave","extend_time","extend_time","extend_time"]}
+    description='The target of this spell is submerged in the water, suffocating until succumbing.'
+    versions={["1.20.1"]}
+    addons={["elemental"]}
+/>
