--- a/src/content/spells/combat/defensive.mdx
+++ b/src/content/spells/combat/defensive.mdx
@@ -66,3 +66,11 @@ Note: Warp scroll should be set to a place far away. Examples: In the void, a pi
     description='Send Melee attackers flying in a fun way!'
     versions={["1.16.5","1.18.2","1.19.2","1.20.1"]}
 />
+
+## Wards of Distance
+<Spell
+    author='Danicus'
+    glyphs={["self","orbit","split","split","split","gust","amplify","delay","snare","extend_time"]}
+    description='You conjure a cohort of magical orbs that will repel and contain those who dare approach you.'
+    versions={["1.20.1"]}
+/>
