feat: add new spells

--- a/src/content/spells/combat/aggressive.mdx
+++ b/src/content/spells/combat/aggressive.mdx
@@ -265,3 +265,23 @@ It uses the &quot;reset&quot; glyph to include the &quot;Explode&quot; glyph wit
     versions={["1.20.1"]}
     addons={["elemental"]}
 />
+
+## Wither and Bloom
+<Spell
+    author='MuteTiefling'
+    glyphs={["touch","chaining","pierce","pierce","aoe","aoe","harm","envenom","envenom","poison_spores","amplify iii"]}
+    description='Used on an Enchanter&apos;s Sword with a Focus of Earth and Geomancer&apos;s Armor with Spores I applied.'
+    versions={["1.19.2"]}
+    addons={["tmg","elemental"]}
+/>
+
+## Hellish Ray
+<Spell
+    author='Clement446'
+    glyphs={["self","wall","aoe","aoe","sensitive","propagate_self","propagate missile","ignite","flare","heal"]}
+    description='Creates a beam of missiles going from yourself, dealing great AOE damage.
+In certain Ars Elemental Versions, Ignite can be removed if you have the Kindling Thread at level three.
+Propagate Missile can be replaced with Propagate Projectile to have better range.'
+    versions={["1.20.1"]}
+    addons={["trinkets","elemental"]}
+/>
