--- a/src/content/spells/other/automation.mdx
+++ b/src/content/spells/other/automation.mdx
@@ -45,3 +45,12 @@ import Spell from '../../../components/Spell.astro'
     versions={["1.16.5","1.18.2","1.19.2","1.20.1"]}
     addons={["tmg"]}
 />
+
+## The Frozen Harvest
+<Spell
+    author='Danicus'
+    glyphs={["touch","chaining","aoe","aoe","conjure_water","freeze","aoe","break","extract","pickup"]}
+    description='Conjure water in front of you or a turret to quickly freeze it for a harvest of blue ice.'
+    versions={["1.20.1"]}
+    addons={["tmg"]}
+/>
