--- a/src/content/spells/other/utility.mdx
+++ b/src/content/spells/other/utility.mdx
@@ -93,3 +93,19 @@ import Spell from '../../../components/Spell.astro'
     description='Tier 2 Mining spell. Creates a 3x3 Tunnel and picks it up. Replace pierce with Extract if required. Perfect for speeding along your diamond mining especially paired with a Jar of Voiding!'
     versions={["1.16.5","1.18.2","1.19.2","1.20.1"]}
 />
+
+## Arborist's Fiend
+<Spell
+    author='WaveClaw'
+    glyphs={["touch","place_block","grow","grow","grow","fell","aoe","pickup"]}
+    description='While holding a sapling in your first inventory slot, cast to quickly grown and fell a forest of trees like the magical lumberjack you were always meant to be.'
+    versions={["1.20.1","1.19.2"]}
+/>
+
+## Fisher of Friends
+<Spell
+    author='WaveClaw'
+    glyphs={["projectile","accelerate","exchange","blink"]}
+    description='Pull a creature to you, even from deep in the void.  Size is not a limitation, make new friends today.'
+    versions={["1.19.2","1.20.1"]}
+/>
