feat: add Eldritch Beam

--- a/src/content/spells/combat/aggressive.mdx
+++ b/src/content/spells/combat/aggressive.mdx
@@ -285,3 +285,13 @@ Propagate Missile can be replaced with Propagate Projectile to have better range
     versions={["1.20.1"]}
     addons={["trinkets","elemental"]}
 />
+
+## Eldritch Beam
+<Spell
+    author='Clement446'
+    glyphs={["self","burst","aoe","aoe","sensitive","propagate_self","propagate missile","harm","amplify","heal"]}
+    description='Creates a Beam of, harmful traveling from the caster&apos;s eyes to the position they are looking at.
+Using an Ignition Thread at level three will enable it to skip I-frames.'
+    versions={["1.20.1"]}
+    addons={["trinkets","elemental"]}
+/>
