fix: remove extra glyph from WIther and Bloom

--- a/src/content/spells/combat/aggressive.mdx
+++ b/src/content/spells/combat/aggressive.mdx
@@ -269,7 +269,7 @@ It uses the &quot;reset&quot; glyph to include the &quot;Explode&quot; glyph wit
 ## Wither and Bloom
 <Spell
     author='MuteTiefling'
-    glyphs={["touch","chaining","pierce","pierce","aoe","aoe","harm","envenom","envenom","poison_spores","amplify iii"]}
+    glyphs={["chaining","pierce","pierce","aoe","aoe","harm","envenom","envenom","poison_spores","amplify 3"]}
     description='Used on an Enchanter&apos;s Sword with a Focus of Earth and Geomancer&apos;s Armor with Spores I applied.'
     versions={["1.19.2"]}
     addons={["tmg","elemental"]}
